--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Lucas Rodrigues da Silva",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "koa": "^2.4.1",
     "koa-route": "^3.2.0",
+    "redis": "^2.8.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   }
