--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Lucas Rodrigues da Silva",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.5.1",
+    "@koa/cors": "^2.2.1",
     "koa": "^2.4.1",
-    "koa-route": "^3.2.0",
-    "redis": "^2.8.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-router": "^7.3.0",
+    "mongodb": "^3.0.1",
+    "mongoose": "^4.13.9",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   }
