--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^2.2.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.1.0",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.3.0",
+    "lodash": "^4.17.4",
     "mongodb": "^3.0.1",
     "mongoose": "^4.13.9",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "validator": "^5.6.0"
   }
 }
